[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/spear.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1 )

[sub_resource type="SphereShape" id=3]
radius = 4.0

[node name="spear" type="Area"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 1.5, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 2 )

[node name="PickArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PickArea"]
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_spear_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_spear_body_entered"]
[connection signal="body_entered" from="PickArea" to="." method="_on_PickArea_body_entered"]
